added more content to inv matica

--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -64,8 +64,8 @@
          </div>
       </nav>
    </header>
-   <main>
-      <div style="margin-bottom: 5rem;">
+   <main style="width: 80%; margin: auto;">
+      <div style="margin: 5rem auto;">
          <h2 class="latitle">Matice</h2>
          <div class="cards">
             <a class="nav-link1" href="témy/uvod/index.html">
