--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -77,7 +77,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main style="margin-top: 3rem;">
         <h3 style="text-align: center;">Sústavy lineárnych rovníc</h3>
         <div class="container my-5">
             <ul class="nav nav-tabs nav-fill" style="margin-bottom: 3rem;" id="myTab" role="tablist"></ul>
