priklady added to inv matica

--- a/linearnaAlgebra/témy/invMaticaVypocet/index.html
+++ b/linearnaAlgebra/témy/invMaticaVypocet/index.html
@@ -173,6 +173,48 @@
                         -7/2 & 2 & -1/2 \\
                         -2 & 1 & -1/2 \end{array}\right)\ .
                         $$</div>
+                     <br><br>
+                     <h6>Vypočítaj inverznú maticu.</h6>
+                     <hr>
+                     <div
+                        style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); grid-gap: 2rem; justify-items: center; align-items: center;">
+                        <div>$$\begin{pmatrix}
+                           1 & 1 \\
+                           1 & -1 \\
+
+                           \end{pmatrix}^{-1} =$$</div>
+                        <div>$$\begin{pmatrix}
+                           2 & 1 \\
+                           -4 & -3 \\
+
+                           \end{pmatrix}^{-1} =$$</div>
+                        <div>$$\begin{pmatrix}
+                           1 & 0 & 1\\
+                           0 & 1 & 1 \\
+                           1 & 1 & 1 \\
+
+                           \end{pmatrix}^{-1} =$$</div>
+                        <div>$$\begin{pmatrix}
+                           3 & 1 & 10\\
+                           2 & 5 & 4 \\
+                           -1 & -3 & 1 \\
+
+                           \end{pmatrix}^{-1} =$$</div>
+                        <div>$$\begin{pmatrix}
+                           1 & 1 & 1 & 1\\
+                           1 & 1 & -1 & -1 \\
+                           1 & -1 & 1 & -1 \\
+                           1 & -1 & -1 & 1 \\
+
+                           \end{pmatrix}^{-1} =$$</div>
+                        <div>$$\begin{pmatrix}
+                           3 & 2 & 1 & 2\\
+                           7 & 5 & 2 & 5 \\
+                           0 & 0 & 9 & 4 \\
+                           0 & 0 & 11 & 5 \\
+
+                           \end{pmatrix}^{-1} =$$</div>
+                     </div>
                   </div>
                   <div class="tab-pane fade" id="practice-problems" role="tabpanel"
                      aria-labelledby="practice-problems-tab">
