--- a/linearnaAlgebra/témy/deterRiadkoveOperacie/index.html
+++ b/linearnaAlgebra/témy/deterRiadkoveOperacie/index.html
@@ -82,11 +82,77 @@
                         operácie O2 (pravidlo D2).</p>
                   </div>
                   <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
-                     <p>Tab 2 content</p>
-                  </div>
-                  <div class="tab-pane fade" id="practice-problems" role="tabpanel"
-                     aria-labelledby="practice-problems-tab">
-                     <p>Tab 3 content</p>
+                     <h5>Kombináciou rôznych metód vypočítajme determinant:</h5>
+                     <div class="mathjax_matrix">$$
+                        {\bf A}=\left( \begin{array}{rrrr}
+                        2 & 3 & 1 & 3 \\
+                        3 & 5 & 1 & 2 \\
+                        4 & 5 & 3 & 2 \\
+                        3 & 1 & 2 & 3\end{array}\right) \
+                        $$</div>
+                     <p>Pri výpočte budeme používat' riadkové a stĺpcové operácie podobne ako pri úprave matice na
+                        <a href="../vypočetGauss/index.html">gaussov tvar.</a>
+                     </p>
+                     <div class="mathjax_matrix">$$
+                        |{\bf A}|=\left| \begin{array}{rrrr}
+                        2 & 3 & 1 & 3 \\
+                        3 & 5 & 1 & 2 \\
+                        4 & 5 & 3 & 2 \\
+                        3 & 1 & 2 & 3\end{array}\right| \ \ \ \begin{array}{l}
+                        S_1\leftrightarrow S_3\ \end{array}
+                        $$</div>
+                     <div class="mathjax_matrix">
+                        $$
+                        = -\left| \begin{array}{rrrr}
+                        1 & 3 & 2 & 3 \\
+                        1 & 5 & 3 & 2 \\
+                        3 & 5 & 4 & 2 \\
+                        2 & 1 & 3 & 3\end{array}\right| \ \ \ \begin{array}{l}
+                        R'_2=R_2+ (-1)R_1 \\
+                        R'_3=R_3+ (-3)R_1 \\R'_4=R_4+ (-2)R_1 \end{array}\begin{array}{l} \end{array}
+                        $$
+                     </div>
+                     <div class="mathjax_matrix">$$
+                        = -\left| \begin{array}{rrrr}
+                        1 & 3 & 2 & 3 \\
+                        0 & 2 & 1 & -1 \\
+                        0 & -4 & -2 & -7 \\
+                        0 & -5 & -1 & -3 \end{array}
+                        \right|
+
+                        $$</div>
+                     <p class="text-center">rozvoj podľa prvého stĺpca</p>
+                     <div class="mathjax_matrix">$$
+                        = - 1.(-1)^{1+1}.\left| \begin{array}{rrr}
+                        2 & 1 & -1 \\
+                        -4 & -2 & -7 \\
+                        -5 & -1 & -3 \end{array}\right| \ \ \ \begin{array}{l}
+                        S_1\leftrightarrow S_2\ \end{array}
+                        $$</div>
+                     <div class="text-center">$$
+                        = + \left| \begin{array}{rrr}
+                        1 & 2 & -1 \\
+                        -2 & -4 & -7 \\
+                        -1 & -5 & -3 \end{array}\right| \ \ \ \begin{array}{l}
+                        R'_2=R_2+2R_1 \\R'_3=R_3+R_1 \end{array}\begin{array}{l} \end{array}
+                        $$</div>
+                     <div class="mathjax_matrix">$$
+                        = \left| \begin{array}{rrr}
+                        1 & 2 & -1 \\
+                        0 & 0 & -9 \\
+                        0 & -3 & -4 \end{array}\right| \ \ \ \begin{array}{l}
+                        R_2\leftrightarrow R_3 \end{array}
+                        $$</div>
+                     <div class="mathjax_matrix">$$
+                        = - \left| \begin{array}{rrr}
+                        1 & 2 & -1 \\
+                        0 & -3 & -4 \\
+                        0 & 0 & -9 \end{array}\right| \ \ \ \begin{array}{l}
+                        \end{array}
+                        $$</div>
+                     <div class="mathjax_matrix">$$
+                        = - (1.(-3).(-9)) = -27\ .
+                        $$</div>
                   </div>
                </div>
             </div>
