added more to funkcie

--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -93,6 +93,51 @@
                     Množina všetkých hodnôt funkcie je obor hodnôt $$H(f)$$.
                 </p>
             </div>
+            <div class="box" id="scrollspyHeading2" style="padding-top: 4rem;">
+                <h3 class="title">Elementárne funkcie</h3>
+                <hr>
+                <br>
+                <div style="margin-bottom: 4rem;">
+                    <h5>Konštantná funkcia</h5>
+                    <br>
+                    <p>je funkcia definovaná v $${\bf R}$$ rovnicou $$y = c $$ , Jej graf je priamka rovnobežná s osou
+                        $$x$$.</p>
+                    <br>
+                    <img src="/images/constantPlot.gif" alt="graf konštantnej funkcie">
+                </div>
+                <div style="margin-bottom: 4rem;">
+                    <h5>Lineárna funkcia</h5>
+                    <br>
+                    <p>je funkcia definovaná v $${\bf R}$$ rovnicou
+                        $$y=kx+q,\ \ \ k \neq 0\ \ \mathrm{sa\ volá}\ smernica.$$</p>
+                    <p>Jej graf je priamka rôznobežná s osou $$x$$. Lineárna funkcia je:</p>
+                    <div>
+                        <ul style="display: inline-block; text-align: left;">
+                            <li>rastúca, ak $$k > 0$$</li>
+                            <li>klesajúca, ak $$k < 0$$</li>
+                        </ul>
+                        <p>a pretína os $$y$$ v bode $$[0,q]$$.</p>
+                        <br>
+                        <img src="/images/linearna_funkcia.png" alt="graf lineárnej funkcie" width="30%">
+
+                    </div>
+
+                </div>
+                <div>
+                    <h5>Kvadratická funkcia</h5>
+                    <br>
+                    <p>je funkcia definovaná v $${\bf R}$$ rovnicou
+                        $$y=ax^2+bx+c,\ \ \ a \neq 0.$$</p>
+                    <p>Jej graf je parabola s osou rovnobežnou s osou $$y$$. Je otvorená nahor, ak $$a>0$$ a nadol, ak
+                        $$a
+                        <0$$. Jej vrchol je v bode $$[-\frac{b}{2a},\frac{4ac-b^2}{4a}]$$.</p>
+                            <br>
+                            <img src="/images/kvadraticka_funkcie.png" alt="graf kvadratickej funkcie" width="30%">
+                </div>
+
+
+                <p></p>
+            </div>
             <div class="box" id="scrollspyHeading4" style="padding-top: 4rem;">
                 <h3 class="title">Graf funkcie</h3>
                 <hr>
