working gauss elim

--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -133,19 +133,12 @@
                     aria-labelledby="practice-problems-tab">
                     <h5>Výpočet sústavy lineárnych rovníc pomocou rozšírenej matice sústavy</h5>
                     <br><br>
-                    <label for="matrix-rows">Počet riadkov matice:</label>
-                    <input style="border: none; border-bottom: 1px solid grey; text-align: center" type="number"
-                        id="matrix-rows" name="matrix-rows" value="3" min="1" max="10" />
 
-                    <label for="matrix-cols">Počet stĺpcov matice:</label>
+                    <label for="matrix-cols">Veľkosť matice:</label>
                     <input style="border: none; border-bottom: 1px solid grey; text-align: center" type="number"
                         id="matrix-cols" name="matrix-cols" value="4" min="1" max="10" />
                     <p>
                     <div style="margin: 3rem auto  auto auto;">
-                        <table id="matrix-input">
-                            <tbody>
-                            </tbody>
-                        </table>
                         <table id="matrix-input">
                             <tbody>
                             </tbody>
