working gauss elim :D yeeee

--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -180,7 +180,7 @@
                     <hr>
                     <br>
                     <div
-                        style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); grid-gap: 3rem; justify-items: center; align-items: center;">
+                        style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); grid-gap: 2rem; justify-items: center; align-items: center;">
                         <div>$$ \begin{array}{rrrrrrrr}
                             2x_1 & + &4x_2 & = & 6 & \\
                             x_1 & - &x_2& = & 0 & \\
@@ -203,6 +203,14 @@
                             x_1 & + &2x_2& + & 3x_3 &= & 14 & \\
                             3x_1 & + &2x_2& + & x_3 & = & 10 & \\
                             3x_1 &+ &x_2 & + &2x_3 & = & 11 & \\
+                            \end{array}
+                        </div>
+                        <div>
+                            \begin{array}{rrrrrrrr}
+                            x_1 & + &2x_2& + & 3x_3 & + & 4x_3 &= & 0 & \\
+                            7x_1 & + &14x_2& + & 20x_3 & + & 27x_3 & = & 0 & \\
+                            5x_1 &+ &10x_2 & + &16x_3 & + & 19x_3 & = & -2 & \\
+                            3x_1 &+ &5x_2 & + &6x_3 & + & 13x_3 & = & 5 & \\
                             \end{array}
                         </div>
                     </div>
