fixed return value multiple solution - gauss elim

--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -213,6 +213,14 @@
                             3x_1 &+ &5x_2 & + &6x_3 & + & 13x_3 & = & 5 & \\
                             \end{array}
                         </div>
+                        <div>
+                            \begin{array}{rrrrrrrr}
+                            2x_1 & + &x_2& - & x_3 & + & x_3 &= & 1 & \\
+                            3x_1 & - &2x_2& + & 2x_3 & - & 3x_3 & = & 2 & \\
+                            2x_1 &- &x_2 & + &x_3 & - & 3x_3 & = & 4 & \\
+                            5x_1 &+ &x_2 & - &x_3 & + & 2x_3 & = & -1 & \\
+                            \end{array}
+                        </div>
                     </div>
                 </div>
                 <div class=" tab-pane fade" id="practice-problems" role="tabpanel"
